--- a/wakepark_front/css/style.css
+++ b/wakepark_front/css/style.css
@@ -203,26 +203,39 @@ h2.contact {
 
 .info-header {
   width: 400px;
-  position: relative;
   height: 100px;
-  background: white;
-  margin-top: 80px;
-  margin-left: 260px;
+  float: left;
+  background: rgba(255, 255, 255, 0.85);
 }
 
 .info-header-text {
-: 30px;
+  font-size: 30px;
+  font-weight: 500;
+  text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-60%);
 }
 
 .info-container {
-  background-color: #1A2D4B;
+  background-color: rgba(26, 45, 75, 0.97);
+  float: left;
   position: absolute;
   padding: 30px;
   text-align: center;
   width: 300px;
-  height: 400px;
+  height: 230px;
   margin-left: 20px;
-  margin-top: 30px;
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
+}
+.info-text {
+  color: white;
+  font-size: 20px;
+  text-align: left;
+  line-height: 2;
+  margin: 0;
 }
 
 .register-banner {
