--- a/wakepark_front/css/style.css
+++ b/wakepark_front/css/style.css
@@ -8,6 +8,16 @@ body {
     padding: 0;
 }
 
+.banner {
+  color: white;
+  font-size: 40px;
+  font-weight: 300;
+  margin:0;
+  width: 400px;
+  float:left;
+  padding: 10px;
+}
+
 ul.nav-bar {
   background: rgb(26, 45, 75, 0.8);
   margin: 0;
@@ -109,8 +119,8 @@ ul.nav-bar a.nav-button:hover {
   font-size: 15px;
   line-height: 25px;
   margin-bottom: 5px;
-  border-style: solid;
-  border-width: 1px;
+  border: 1px solid #9d9d9d;
+  border-radius: 2px;
 }
 
 .riderInput {
@@ -123,6 +133,7 @@ ul.nav-bar a.nav-button:hover {
   padding: 5px;
   margin-top: 10px;
   margin-bottom: 5px;
+  margin-left: 5px;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2), 0 2px 10px 0 rgba(0,0,0,0.19);
   -webkit-transition: background .25s ease;
   -moz-transition: background .25s ease;
@@ -292,7 +303,7 @@ h2.contact {
 }
 .info-text {
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   text-align: left;
   line-height: 2;
   margin: 0;
@@ -325,7 +336,7 @@ h2.contact {
   margin: 0 auto;
   padding-top: 0;
   background-color: rgb(26, 45, 75, 0.9);
-  height: 500px;
+  height: 520px;
   width: 400px;
   border-style: solid;
   border-width: 1px;
@@ -338,12 +349,18 @@ h2.contact {
   transition: 0.3s;
 }
 
+.confirmation {
+  font-size: 15px;
+  color: white;
+  font-weight: 300;
+}
+
 .user-register-container {
   text-align: center;
   margin: 0 auto;
   padding-top: 0;
   background-color: rgb(26, 45, 75, 0.9);
-  height: 155px;
+  height: 150px;
   width: 200px;
   border-style: solid;
   border-width: 1px;
@@ -517,24 +534,71 @@ h2.contact {
 }
 
 .profile-change-form {
-  width: 600px;
-  background-color: white;
+  width: 450px;
+  border-right: 1px solid #5d77a0;
 }
 
 label {
+  color: white;
+  font-weight: 300;
   display: inline-block;
   width: 120px;
   margin-left: 10px;
 }
 
-.profile-change-form p {
-  margin-bottom: 20px;
+.profile-change-form p, .password-change-form p {
   font-size: 15px;
 }
 
-.profile-change-form input {
-
+.profile-change-form input, .password-change-form input {
+  width: 150px;
+  height: 10px;
+  border-radius: 2px;
+  background-color: #243a5d;
+  color: white;
+  font-size: 15px;
+  font-weight: 300;
+  padding: 10px;
+  margin: 8px;
 }
 
-.profile-change-input {
+.profile-change-form input:hover, .password-change-form input:hover {
+  background-color: rgb(41, 69, 113);
+}
+
+.profile-change-button {
+  width: 180px;
+  background-color: #45c3e0;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 2px;
+  color: white;
+  padding: 10px 5px;
+  font-weight: 200;
+  font-size: 15px;
+  margin-left: 140px;
+}
+
+.profile-change-button:hover {
+  background-color: #81e3fa;
+  transition: 0.5s;
+}
+
+.password-change-form {
+  margin-top: 50px;
+}
+
+.logout-button {
+  width: 50px;
+  height: 45px;
+  border: none;
+  background: rgba(255, 255, 255, 0);
+  color: white;
+  float: right;
+  margin-right: 20px;
+  position: absolute;
+}
+
+.logout-button:hover {
+  cursor: pointer;
 }
