--- a/wakepark_front/css/style.css
+++ b/wakepark_front/css/style.css
@@ -240,8 +240,8 @@ h2.contact {
   font-size: 30px;
   font-weight: 400;
   text-align: left;
-  background: #ffffff;
   padding: 20px;
+  background: rgb(255, 255, 255, 0.90);
 }
 
 .contact-container, .profile-change-container {
@@ -274,7 +274,7 @@ h2.contact {
 
 .info-header {
   width: 400px;
-  height: 100px;
+  height: 80px;
   float: left;
   background: rgba(255, 255, 255, 0.85);
 }
@@ -284,7 +284,7 @@ h2.contact {
   font-weight: 500;
   text-align: center;
   position: relative;
-  top: 50%;
+  top: 20%;
   transform: translateY(-60%);
 }
 
